WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194230
Can't temporarily force light or dark appearance on a page in a WebView
https://bugs.webkit.org/show_bug.cgi?id=194230
Summary
Can't temporarily force light or dark appearance on a page in a WebView
Timothy Hatcher
Reported
2019-02-04 11:08:51 PST
Needed by clients to switch the appearance for DOM processing explicitly in light or dark mode. Similar to the WK2 version added in
bug 193327
.
Attachments
Patch
(1.98 KB, patch)
2019-02-04 11:15 PST
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Patch
(2.20 KB, patch)
2019-02-04 13:04 PST
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2019-02-04 11:15:12 PST
Comment hidden (obsolete)
Created
attachment 361075
[details]
Patch
Tim Horton
Comment 2
2019-02-04 11:40:20 PST
Comment on
attachment 361075
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=361075&action=review
> Source/WebKitLegacy/mac/WebView/WebViewPrivate.h:325 > +- (void)_setUseDarkAppearance:(BOOL)useDarkAppearance;
Why not a @property with a getter?
Timothy Hatcher
Comment 3
2019-02-04 13:04:57 PST
Created
attachment 361088
[details]
Patch
WebKit Commit Bot
Comment 4
2019-02-04 16:28:29 PST
Comment on
attachment 361088
[details]
Patch Clearing flags on attachment: 361088 Committed
r240948
: <
https://trac.webkit.org/changeset/240948
>
WebKit Commit Bot
Comment 5
2019-02-04 16:28:30 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-02-04 16:29:37 PST
<
rdar://problem/47804744
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug