Add WebView SPI to temporarily force light or dark appearance on a page. https://bugs.webkit.org/show_bug.cgi?id=194230

Reviewed by Tim Horton.

* WebView/WebView.mm:
(-[WebView _useDarkAppearance:]): Added.
(-[WebView _setUseDarkAppearance:]): Added.
* WebView/WebViewPrivate.h:


Canonical link: https://commits.webkit.org/208708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240948 268f45cc-cd09-0410-ab3c-d52691b4dbfc